<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/bground4"
    tools:context=".Distance_conversion">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Distance Conversion"
        android:textColor="#F7FAFC"
        android:textSize="40dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/distanceEditTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:hint="@string/editTextHint"
        android:textColor="#F7FAFC"
        android:inputType="numberDecimal"
        android:textColorHint="#CF7FAF"
        android:textSize="25dp"

        />
    <RadioGroup
        android:id="@+id/distanceRadioGroupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        >
        <RadioButton
            android:id="@+id/MeterToMileId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disOption1"
            android:backgroundTint="#F7FAFC"
            android:layout_marginLeft="40dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#F7FAFC"

            />
        <RadioButton
            android:id="@+id/MeterToFootId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disOption2"
            android:backgroundTint="#F7FAFC"
            android:layout_marginLeft="40dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#F7FAFC"
            android:layout_marginBottom="10dp"
            />
        <RadioButton
            android:id="@+id/MeterToInchId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disOption3"
            android:backgroundTint="#F7FAFC"
            android:layout_marginLeft="40dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#F7FAFC"
            android:layout_marginBottom="10dp"
            />
        <RadioButton
            android:id="@+id/MileToFootId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disOption4"
            android:backgroundTint="#F7FAFC"
            android:layout_marginLeft="40dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#F7FAFC"
            android:layout_marginBottom="10dp"
            />
        <RadioButton
            android:id="@+id/MileToInchId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disOption5"
            android:backgroundTint="#F7FAFC"
            android:layout_marginLeft="40dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#F7FAFC"
            android:layout_marginBottom="10dp"
            />

    </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        >
        <Button
            android:id="@+id/disConvertId"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Convert"
            />
        <Button
            android:id="@+id/disClearId"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Clear"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F7FAFC"
            android:textColorHint="#F7FAFC"
            android:text="Result : "
            android:textStyle="bold"
            android:textSize="25dp"

            />
        <TextView
            android:id="@+id/distanceResultId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F7FAFC"
            android:textColorHint="#F7FAFC"
            android:textSize="25dp"

            />
    </LinearLayout>

</FrameLayout>