<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bground3"
    tools:context=".currency_conversion">

    <TextView
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="Weight Conversion"
        android:textColor="#F7FAFC"
        android:textSize="40dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/currencyEditTextId"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/editTextHint"
        android:inputType="numberDecimal"
        android:textColor="#F7FAFC"
        android:textColorHint="#C4C4C4"
        android:textSize="25dp" />

    <RadioGroup
        android:id="@+id/currencyRadioGroupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#F7FAFC"
        >

        <RadioButton
            android:id="@+id/DollarToTakaId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:backgroundTint="#F7FAFC"
            android:text="@string/curOption1"
            android:textColor="#F7FAFC"
            android:textSize="20dp"
            android:textStyle="bold"

            />

        <RadioButton
            android:id="@+id/RupeeToTakaId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F7FAFC"
            android:text="@string/curOption2"
            android:textColor="#F7FAFC"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/PoundToTakaId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F7FAFC"
            android:text="@string/curOption3"
            android:textColor="#F7FAFC"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/RupeeToDollarId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F7FAFC"
            android:text="@string/curOption4"
            android:textColor="#F7FAFC"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/RupeeToPoundId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F7FAFC"
            android:text="@string/curOption5"
            android:textColor="#F7FAFC"
            android:textSize="20dp"
            android:textStyle="bold" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        >

        <Button
            android:id="@+id/curConvertId"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:text="Convert"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/curClearId"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:text="Clear"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Result : "
            android:textColor="#F7FAFC"
            android:textColorHint="#F7FAFC"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currencyResultId"
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:textColor="#F7FAFC"
            android:textColorHint="#F7FAFC"
            android:textSize="25dp" />

    </LinearLayout>



</TableLayout>