<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bground2"
    tools:context=".Weight_conversion">

    <TextView
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:layout_x="22dp"
        android:layout_y="39dp"
        android:text="Weight Conversion"
        android:textColor="#F7FAFC"
        android:textSize="40dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/weightEditTextId"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_x="32dp"
        android:layout_y="125dp"
        android:hint="@string/editTextHint"
        android:inputType="numberDecimal"
        android:textColor="#F7FAFC"
        android:textColorHint="#C4C4C4"
        android:textSize="25dp" />

    <RadioGroup
        android:id="@+id/weightRadioGroupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:backgroundTint="#F7FAFC"
        android:layout_x="25dp"
        android:layout_y="233dp">

        <RadioButton
            android:id="@+id/GramsToOuncesId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:backgroundTint="#F7FAFC"
            android:text="@string/weiOption1"
            android:textColor="#F7FAFC"
            android:textSize="20dp"
            android:textStyle="bold"

            />

        <RadioButton
            android:id="@+id/GramsToPoundsId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F7FAFC"
            android:text="@string/weiOption2"
            android:textColor="#F7FAFC"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/GramsToTonsId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F7FAFC"
            android:text="@string/weiOption3"
            android:textColor="#F7FAFC"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/PoundsToTonsId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F7FAFC"
            android:text="@string/weiOption4"
            android:textColor="#F7FAFC"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/PoundsToOunces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F7FAFC"
            android:text="@string/weiOption5"
            android:textColor="#F7FAFC"
            android:textSize="20dp"
            android:textStyle="bold" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_x="21dp"
        android:layout_y="473dp">

        <Button
            android:id="@+id/weiConvertId"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:text="Convert"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/weiClearId"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:text="Clear"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="520dp"
        android:layout_x="0dp"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_x="37dp"
        android:layout_y="585dp"
        android:text="Result : "
        android:textColor="#F7FAFC"
        android:textColorHint="#F7FAFC"

        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/weightResultId"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_x="145dp"
        android:layout_y="584dp"
        android:textColor="#F7FAFC"

        android:textColorHint="#F7FAFC"
        android:textSize="25dp" />

</AbsoluteLayout>